@@ -1,3 +1,7 @@
+2004-03-10  ujwal
+
+	* Adjusted selection code to accommodate newwly added margin.
+
 2004-03-09  fabian
 
 	* Added margins on the side.
